# analyticsbase

./: Cargo.toml
res/systemd/: _analyticsbase.service  _soundbase.service
src/: analytics_handler.rs  analytics_model.rs  main.rs
src/db/: analytics.rs  mod.rs
