[package]
name = "analyticsbase"
version = "0.1.0"
authors = ["nzelot <leontsteiner@gmail.com>"]
license = "GPL-3.0-or-later"
license-file = "LICENSE"

edition = "2018"

[dependencies]
flatbuffers = "0.8"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
bytes = "1.0.1"
http = "0.2"
r2d2 = "0.8"
r2d2_sqlite = "0.18"
rusqlite = { version = "0.25", features = ["bundled"]}